testdata/snapshots/slatedb__row_codec__tests__empty key suffix.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "empty key suffix",
    [
        0,
        4,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        5,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 4,
        key_suffix: b"",
        seq: 1,
        expire_ts: None,
        create_ts: None,
        value: Value(
            b"value",
        ),
    },
    b"keyp",
)
