testdata/snapshots/slatedb__row_codec__tests__empty key suffix_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 4,
    key_suffix: b"",
    seq: 1,
    expire_ts: None,
    create_ts: None,
    value: Value(
        b"value",
    ),
}
