testdata/snapshots/slatedb__row_codec__tests__empty key suffix_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    5,
    118,
    97,
    108,
    117,
    101,
]
