testdata/snapshots/slatedb__row_codec__tests__large sequence number.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "large sequence number",
    [
        0,
        3,
        0,
        3,
        115,
        101,
        113,
        255,
        255,
        255,
        255,
        255,
        255,
        255,
        255,
        0,
        0,
        0,
        0,
        5,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 3,
        key_suffix: b"seq",
        seq: 18446744073709551615,
        expire_ts: None,
        create_ts: None,
        value: Value(
            b"value",
        ),
    },
    b"bigseq",
)
