testdata/snapshots/slatedb__row_codec__tests__large sequence number_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 3,
    key_suffix: b"seq",
    seq: 18446744073709551615,
    expire_ts: None,
    create_ts: None,
    value: Value(
        b"value",
    ),
}
