testdata/snapshots/slatedb__row_codec__tests__large sequence number_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    3,
    0,
    3,
    115,
    101,
    113,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    0,
    0,
    0,
    0,
    5,
    118,
    97,
    108,
    117,
    101,
]
